Improved Ship token
- renamed from Crystal token (usability)
- improved tooltip formulation (usability)
- added more textures variations

--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -118,15 +118,41 @@ item.warpdrive.upgrade.Range.name=Reichweiten Upgrade
 item.warpdrive.upgrade.Energy.name=Energie Upgrade
 
 
-item.warpdrive.tool.crystalToken.name=Kristall Token
 item.warpdrive.tool.crystalToken.tooltip_new=Crystal encapsulation of ship '%1$s'\n§bEnter the red builder's field§7 to claim a ship
-item.warpdrive.tool.crystalToken.tooltip=Kristall Kapsel des Schiffes '%1$s'\n§bBetritt das Scanner Feld§7 um das Schiff zu bauen.
-item.warpdrive.tool.crystalToken0.name=Kristall Token #0
-item.warpdrive.tool.crystalToken1.name=Kristall Token #1
-item.warpdrive.tool.crystalToken2.name=Kristall Token #2
-item.warpdrive.tool.crystalToken3.name=Kristall Token #3
-item.warpdrive.tool.crystalToken4.name=Kristall Token #4
-item.warpdrive.tool.crystalToken5.name=Kristall Token #5
+
+item.warpdrive.tool.ship_token.name=Schiffes token
+item.warpdrive.tool.ship_token.tooltip=Token exchangeable for ship '%1$s'\n§bEnter red builder's field§7 to claim it
+item.warpdrive.tool.ship_token.tooltip_legacyTranslation=Kristall Kapsel des Schiffes '%1$s'\n§bBetritt das Scanner Feld§7 um das Schiff zu bauen.
+item.warpdrive.tool.ship_token0.name=Schiffes token #0
+item.warpdrive.tool.ship_token1.name=Schiffes token #1
+item.warpdrive.tool.ship_token2.name=Schiffes token #2
+item.warpdrive.tool.ship_token3.name=Schiffes token #3
+item.warpdrive.tool.ship_token4.name=Schiffes token #4
+item.warpdrive.tool.ship_token5.name=Schiffes token #5
+item.warpdrive.tool.ship_token10.name=Schiffes token #10
+item.warpdrive.tool.ship_token11.name=Schiffes token #11
+item.warpdrive.tool.ship_token12.name=Schiffes token #12
+item.warpdrive.tool.ship_token13.name=Schiffes token #13
+item.warpdrive.tool.ship_token14.name=Schiffes token #14
+item.warpdrive.tool.ship_token15.name=Schiffes token #15
+item.warpdrive.tool.ship_token20.name=Schiffes token #20
+item.warpdrive.tool.ship_token21.name=Schiffes token #21
+item.warpdrive.tool.ship_token22.name=Schiffes token #22
+item.warpdrive.tool.ship_token23.name=Schiffes token #23
+item.warpdrive.tool.ship_token24.name=Schiffes token #24
+item.warpdrive.tool.ship_token25.name=Schiffes token #25
+item.warpdrive.tool.ship_token30.name=Schiffes token #30
+item.warpdrive.tool.ship_token31.name=Schiffes token #31
+item.warpdrive.tool.ship_token32.name=Schiffes token #32
+item.warpdrive.tool.ship_token33.name=Schiffes token #33
+item.warpdrive.tool.ship_token34.name=Schiffes token #34
+item.warpdrive.tool.ship_token35.name=Schiffes token #35
+item.warpdrive.tool.ship_token40.name=Schiffes token #40
+item.warpdrive.tool.ship_token41.name=Schiffes token #41
+item.warpdrive.tool.ship_token42.name=Schiffes token #42
+item.warpdrive.tool.ship_token43.name=Schiffes token #43
+item.warpdrive.tool.ship_token44.name=Schiffes token #44
+item.warpdrive.tool.ship_token45.name=Schiffes token #45
 
 
 item.warpdrive.tool.tuning_driver.video_channel.name=Videokanal Werkzeug
