--- a/src/main/resources/assets/warpdrive/lang/en_US.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_US.lang
@@ -40,7 +40,6 @@ item.warpdrive.crafting.CoilCrystal.name=Coil Crystal
 item.warpdrive.crafting.ElectromagneticProjector.name=Electromagnetic Projector
 item.warpdrive.crafting.Superconductor.name=Superconductor
 
-item.warpdrive.armor.AirCanisterFull.name=Air Canister
 item.warpdrive.armor.helmet.name=Warp Helmet
 item.warpdrive.armor.chestplate.name=Warp Chestplate
 item.warpdrive.armor.leggings.name=Warp Leggings
@@ -49,6 +48,11 @@ item.warpdrive.armor.boots.name=Warp Boots
 item.warpdrive.atomic.electromagnetic_cell.name=Electromagnetic cell
 item.warpdrive.atomic.electromagnetic_cell.tooltip.empty=Use a particle collider to fill me!
 item.warpdrive.atomic.electromagnetic_cell.tooltip.filled=Contains %1$s Å³ of %2$s
+
+item.warpdrive.breathing.air_tank0.name=Air Canister
+item.warpdrive.breathing.air_tank1.name=Basic Air Tank
+item.warpdrive.breathing.air_tank2.name=Advanced Air Tank
+item.warpdrive.breathing.air_tank3.name=Superior Air Tank
 
 item.warpdrive.energy.IC2reactorLaserFocus.name=IC2 Reactor Laser Focus
 
