--- a/src/main/resources/assets/warpdrive/lang/en_US.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_US.lang
@@ -123,7 +123,7 @@ item.warpdrive.upgrade.Energy.name=Energy Upgrade
 
 
 item.warpdrive.tool.ship_token.name=Ship token
-item.warpdrive.tool.ship_token.tooltip=Token exchangeable for ship '%1$s'\n§bEnter red builder's field§7 to claim it
+item.warpdrive.tool.ship_token.tooltip=Token exchangeable for ship '%1$s'\n§bEnter a builder's field§7 to claim it
 item.warpdrive.tool.ship_token0.name=Ship token #0
 item.warpdrive.tool.ship_token1.name=Ship token #1
 item.warpdrive.tool.ship_token2.name=Ship token #2
@@ -292,6 +292,8 @@ tile.warpdrive.movement.ShipController.name=Ship Controller
 tile.warpdrive.movement.ShipController.tooltip=Defines your ship front relative to the core. Attach a computer to open the user interface.\nShall be placed horizontally directly next to the Ship core.
 tile.warpdrive.movement.ShipCore.name=Ship Core
 tile.warpdrive.movement.ShipCore.tooltip=Defines your ship center relative to the controller. Connecting an energy source will charge the core.\nShall be placed horizontally directly next to the Ship controller.
+tile.warpdrive.movement.ShipCore.bounding_box.disabled=Bounding box display have been disabled.
+tile.warpdrive.movement.ShipCore.bounding_box.enabled=Bounding box display is now enabled. Only you can see it.\nSneak right-click the Ship core again to disable it.
 tile.warpdrive.movement.Transporter.name=Transporter
 
 tile.warpdrive.weapon.LaserCamera.name=Laser + Camera
@@ -672,8 +674,10 @@ warpdrive.cloakingCore.valid=System is valid
 warpdrive.cloakingCore.disabled=Cloak is disabled
 warpdrive.cloakingCore.lowPower=§cCloak is down, we need more power Captain!
 warpdrive.cloakingCore.cloaking=A tier %1$d cloak is currently covering %2$d blocks!
+
 warpdrive.IC2reactorLaserMonitor.noReactor=No reactor found!
 warpdrive.IC2reactorLaserMonitor.multipleReactors=%1$d reactor(s) connected.
+
 warpdrive.transporter.status=From %1$.0f %2$.0f %3$.0f to %4$.0f %5$.0f %6$.0f
 
 warpdrive.tooltip.itemTag.breathingHelmet=§bSpace breathing§r consuming Air canisters and IC2 Compressed air cells from your inventory.
