Updated language files to current codebase

--- a/src/main/resources/assets/warpdrive/lang/nl_NL.lang
+++ b/src/main/resources/assets/warpdrive/lang/nl_NL.lang
@@ -40,7 +40,6 @@ item.warpdrive.crafting.CoilCrystal.name=Spoelkristal
 item.warpdrive.crafting.ElectromagneticProjector.name=Electromagnetische Projector
 item.warpdrive.crafting.Superconductor.name=Superconductor
 
-item.warpdrive.armor.AirCanisterFull.name=zuurstoffles
 item.warpdrive.armor.helmet.name=Warp Helm
 item.warpdrive.armor.chestplate.name=Warp Borstplaat
 item.warpdrive.armor.leggings.name=Warp Broek
@@ -49,6 +48,11 @@ item.warpdrive.armor.boots.name=Warp Schoenen
 item.warpdrive.atomic.electromagnetic_cell.name=Electromagnetische Cell
 item.warpdrive.atomic.electromagnetic_cell.tooltip.empty=Gebruik een deeltjesversneller om me te vullen!
 item.warpdrive.atomic.electromagnetic_cell.tooltip.filled=Is gevuld met %1$s Å³ van %2$s
+
+item.warpdrive.breathing.air_tank0.name=zuurstoffles
+item.warpdrive.breathing.air_tank1.name=Basic Air Tank
+item.warpdrive.breathing.air_tank2.name=Advanced Air Tank
+item.warpdrive.breathing.air_tank3.name=Superior Air Tank
 
 item.warpdrive.energy.IC2reactorLaserFocus.name=IC2 Reactor Laser Lens
 
@@ -118,14 +122,38 @@ item.warpdrive.upgrade.Range.name=Bereiks-upgrade
 item.warpdrive.upgrade.Energy.name=Energiecapaciteits-upgrade
 
 
-item.warpdrive.tool.crystalToken.name=Kristallen kenteken
-item.warpdrive.tool.crystalToken.tooltip=Kristallen inkapseling van het schip'%1$s'\n§bGa naar het rode bouwersveldd§7 om het schip te claimen
-item.warpdrive.tool.crystalToken0.name=Kristallen kenteken #0
-item.warpdrive.tool.crystalToken1.name=Kristallen kenteken #1
-item.warpdrive.tool.crystalToken2.name=Kristallen kenteken #2
-item.warpdrive.tool.crystalToken3.name=Kristallen kenteken #3
-item.warpdrive.tool.crystalToken4.name=Kristallen kenteken #4
-item.warpdrive.tool.crystalToken5.name=Kristallen kenteken #5
+item.warpdrive.tool.ship_token.name=Schip kenteken
+item.warpdrive.tool.ship_token.tooltip=Schip inkapseling van het schip'%1$s'\n§bGa naar het rode bouwersveldd§7 om het schip te claimen
+item.warpdrive.tool.ship_token0.name=Schip kenteken #0
+item.warpdrive.tool.ship_token1.name=Schip kenteken #1
+item.warpdrive.tool.ship_token2.name=Schip kenteken #2
+item.warpdrive.tool.ship_token3.name=Schip kenteken #3
+item.warpdrive.tool.ship_token4.name=Schip kenteken #4
+item.warpdrive.tool.ship_token5.name=Schip kenteken #5
+item.warpdrive.tool.ship_token10.name=Schip kenteken #10
+item.warpdrive.tool.ship_token11.name=Schip kenteken #11
+item.warpdrive.tool.ship_token12.name=Schip kenteken #12
+item.warpdrive.tool.ship_token13.name=Schip kenteken #13
+item.warpdrive.tool.ship_token14.name=Schip kenteken #14
+item.warpdrive.tool.ship_token15.name=Schip kenteken #15
+item.warpdrive.tool.ship_token20.name=Schip kenteken #20
+item.warpdrive.tool.ship_token21.name=Schip kenteken #21
+item.warpdrive.tool.ship_token22.name=Schip kenteken #22
+item.warpdrive.tool.ship_token23.name=Schip kenteken #23
+item.warpdrive.tool.ship_token24.name=Schip kenteken #24
+item.warpdrive.tool.ship_token25.name=Schip kenteken #25
+item.warpdrive.tool.ship_token30.name=Schip kenteken #30
+item.warpdrive.tool.ship_token31.name=Schip kenteken #31
+item.warpdrive.tool.ship_token32.name=Schip kenteken #32
+item.warpdrive.tool.ship_token33.name=Schip kenteken #33
+item.warpdrive.tool.ship_token34.name=Schip kenteken #34
+item.warpdrive.tool.ship_token35.name=Schip kenteken #35
+item.warpdrive.tool.ship_token40.name=Schip kenteken #40
+item.warpdrive.tool.ship_token41.name=Schip kenteken #41
+item.warpdrive.tool.ship_token42.name=Schip kenteken #42
+item.warpdrive.tool.ship_token43.name=Schip kenteken #43
+item.warpdrive.tool.ship_token44.name=Schip kenteken #44
+item.warpdrive.tool.ship_token45.name=Schip kenteken #45
 
 
 item.warpdrive.tool.tuning_driver.video_channel.name=Videokanaal afstemmer
@@ -139,7 +167,7 @@ item.warpdrive.tool.tuning_fork.name=Afstemmingsvork
 item.warpdrive.tool.tuning_fork.white.name=Witte Afstemmingsvork
 item.warpdrive.tool.tuning_fork.orange.name=Oranje Afstemmingsvork
 item.warpdrive.tool.tuning_fork.magenta.name=Magenta Afstemmingsvork
-item.warpdrive.tool.tuning_fork.lightBlauw.name=Lichtblauwe Afstemmingsvork
+item.warpdrive.tool.tuning_fork.lightBlue.name=Lichtblauwe Afstemmingsvork
 item.warpdrive.tool.tuning_fork.yellow.name=Gele Afstemmingsvork
 item.warpdrive.tool.tuning_fork.lime.name=Limoenkleurige Afstemmingsvork
 item.warpdrive.tool.tuning_fork.pink.name=Roze Afstemmingsvork
@@ -160,6 +188,7 @@ tile.warpdrive.decoration.decorative.energized.name=Geactiveerd Blok
 tile.warpdrive.decoration.decorative.network.name=Netwerk Blok
 tile.warpdrive.decoration.decorative.plain.name=Oppervlaksblok
 tile.warpdrive.decoration.gas.name=Gasblok
+tile.warpdrive.decoration.bedrock_glass.name=Bedrock Glass
 
 tile.warpdrive.passive.IridiumBlock.name=Iridium Blok
 tile.warpdrive.passive.HighlyAdvancedMachine.name=Heel geavanceerd machineblok
@@ -263,6 +292,8 @@ tile.warpdrive.movement.ShipController.name=Schips-Bestuurder
 tile.warpdrive.movement.ShipController.tooltip=Difineert uw schips-voorkant ten opzigte van kern. Sluit een computer aan om de interface te openen.\nMoet horizontaal naast een Schips-Kern worden geplaatst.
 tile.warpdrive.movement.ShipCore.name=Schip-Kern
 tile.warpdrive.movement.ShipCore.tooltip=Definieert uw schips-middelpunt ten opzichte van ships-bestuurder. Sluit een stroombron aan om de kern op te laden.\nMoet horizontaal naast een Schips-bestuurder worden geplaatst.
+tile.warpdrive.movement.ShipCore.bounding_box.disabled=Bounding box display have been disabled.
+tile.warpdrive.movement.ShipCore.bounding_box.enabled=Bounding box display is now enabled. Only you can see it.\nSneak right-click the Ship core again to disable it.
 tile.warpdrive.movement.Transporter.name=Transporteur
 
 tile.warpdrive.weapon.LaserCamera.name=Laser met Camera
@@ -273,7 +304,7 @@ tile.warpdrive.weapon.WeaponController.name=Wapens-Bestuurder
 tile.warpdrive.hull1.plain.white.name=Wit Gekleurd Normaal Pantser
 tile.warpdrive.hull1.plain.orange.name=Oranje Gekleurd Normaal Pantser
 tile.warpdrive.hull1.plain.magenta.name=Magenta Gekleurd Normaal Pantser
-tile.warpdrive.hull1.plain.lightBlauw.name=Licht blauw Gekleurd Normaal Pantser
+tile.warpdrive.hull1.plain.lightBlue.name=Licht blauw Gekleurd Normaal Pantser
 tile.warpdrive.hull1.plain.yellow.name=Geel Gekleurd Normaal Pantser
 tile.warpdrive.hull1.plain.lime.name=Limoen Gekleurd Normaal Pantser
 tile.warpdrive.hull1.plain.pink.name=Roze Gekleurd Normaal Pantser
@@ -290,7 +321,7 @@ tile.warpdrive.hull1.plain.black.name=Zwart Gekleurd Normaal Pantser
 tile.warpdrive.hull1.glass.white.name=Wit Gekleurd Normaal Pantser Glas
 tile.warpdrive.hull1.glass.orange.name=Oranje Gekleurd Normaal Pantser Glas
 tile.warpdrive.hull1.glass.magenta.name=Magenta Gekleurd Normaal Pantser Glas
-tile.warpdrive.hull1.glass.lightBlauw.name=Licht blauw Gekleurd Normaal Pantser Glas
+tile.warpdrive.hull1.glass.lightBlue.name=Licht blauw Gekleurd Normaal Pantser Glas
 tile.warpdrive.hull1.glass.yellow.name=Geel Gekleurd Normaal Pantser Glas
 tile.warpdrive.hull1.glass.lime.name=Limoen Gekleurd Normaal Pantser Glas
 tile.warpdrive.hull1.glass.pink.name=Roze Gekleurd Normaal Pantser Glas
@@ -307,7 +338,7 @@ tile.warpdrive.hull1.glass.black.name=Zwart Gekleurd Normaal Pantser Glas
 tile.warpdrive.hull1.omnipanel.white.name=Wit Gekleurd Normaal Pantser Omnipaneel
 tile.warpdrive.hull1.omnipanel.orange.name=Oranje Gekleurd Normaal Pantser Omnipaneel
 tile.warpdrive.hull1.omnipanel.magenta.name=Magenta Gekleurd Normaal Pantser Omnipaneel
-tile.warpdrive.hull1.omnipanel.lightBlauw.name=Licht Blauw Gekleurd Normaal Pantser Omnipaneel
+tile.warpdrive.hull1.omnipanel.lightBlue.name=Licht Blauw Gekleurd Normaal Pantser Omnipaneel
 tile.warpdrive.hull1.omnipanel.yellow.name=Geel Gekleurd Normaal Pantser Omnipaneel
 tile.warpdrive.hull1.omnipanel.lime.name=Limoen Gekleurd Normaal Pantser Omnipaneel
 tile.warpdrive.hull1.omnipanel.pink.name=Roze Gekleurd Normaal Pantser Omnipaneel
@@ -324,7 +355,7 @@ tile.warpdrive.hull1.omnipanel.black.name=Zwart Gekleurd Normaal Pantser Omnipan
 tile.warpdrive.hull1.slab.white.name=Wit Gekleurd Normaal Pantser Plaat
 tile.warpdrive.hull1.slab.orange.name=Oranje Gekleurd Normaal Pantser Plaat
 tile.warpdrive.hull1.slab.magenta.name=Magenta Gekleurd Normaal Pantser Plaat
-tile.warpdrive.hull1.slab.lightBlauw.name=Licht Blauw Gekleurd Normaal Pantser Plaat
+tile.warpdrive.hull1.slab.lightBlue.name=Licht Blauw Gekleurd Normaal Pantser Plaat
 tile.warpdrive.hull1.slab.yellow.name=Geel Gekleurd Normaal Pantser Plaat
 tile.warpdrive.hull1.slab.lime.name=Limoen Gekleurd Normaal Pantser Plaat
 tile.warpdrive.hull1.slab.pink.name=Roze Gekleurd Normaal Pantser Plaat
@@ -341,7 +372,7 @@ tile.warpdrive.hull1.slab.black.name=Zwart Gekleurd Normaal Pantser Plaat
 tile.warpdrive.hull1.stairs.white.name=Wit Gekleurd Normaal Pantser Trap
 tile.warpdrive.hull1.stairs.orange.name=Oranje Gekleurd Normaal Pantser Trap
 tile.warpdrive.hull1.stairs.magenta.name=Magenta Gekleurd Normaal Pantser Trap
-tile.warpdrive.hull1.stairs.lightBlauw.name=Licht Blauw Gekleurd Normaal Pantser Trap
+tile.warpdrive.hull1.stairs.lightBlue.name=Licht Blauw Gekleurd Normaal Pantser Trap
 tile.warpdrive.hull1.stairs.yellow.name=Geel Gekleurd Normaal Pantser Trap
 tile.warpdrive.hull1.stairs.lime.name=Limoen Gekleurd Normaal Pantser Trap
 tile.warpdrive.hull1.stairs.pink.name=Roze Gekleurd Normaal Pantser Trap
@@ -359,7 +390,7 @@ tile.warpdrive.hull1.stairs.black.name=Zwart Gekleurd Normaal Pantser Trap
 tile.warpdrive.hull2.plain.white.name=Wit Gekleurd Geavanceerd Pantser
 tile.warpdrive.hull2.plain.orange.name=Oranje Gekleurd Geavanceerd Pantser
 tile.warpdrive.hull2.plain.magenta.name=Magenta Gekleurd Geavanceerd Pantser
-tile.warpdrive.hull2.plain.lightBlauw.name=Licht Blauw Gekleurd Geavanceerd Pantser
+tile.warpdrive.hull2.plain.lightBlue.name=Licht Blauw Gekleurd Geavanceerd Pantser
 tile.warpdrive.hull2.plain.yellow.name=Geel Gekleurd Geavanceerd Pantser
 tile.warpdrive.hull2.plain.lime.name=Limoen Gekleurd Geavanceerd Pantser
 tile.warpdrive.hull2.plain.pink.name=Roze Gekleurd Geavanceerd Pantser
@@ -376,7 +407,7 @@ tile.warpdrive.hull2.plain.black.name=Zwart Gekleurd Geavanceerd Pantser
 tile.warpdrive.hull2.glass.white.name=Wit Gekleurd Geavanceerd Pantser Glas
 tile.warpdrive.hull2.glass.orange.name=Oranje Gekleurd Geavanceerd Pantser Glas
 tile.warpdrive.hull2.glass.magenta.name=Magenta Gekleurd Geavanceerd Pantser Glas
-tile.warpdrive.hull2.glass.lightBlauw.name=Licht Blauw Gekleurd Geavanceerd Pantser Glas
+tile.warpdrive.hull2.glass.lightBlue.name=Licht Blauw Gekleurd Geavanceerd Pantser Glas
 tile.warpdrive.hull2.glass.yellow.name=Geel Gekleurd Geavanceerd Pantser Glas
 tile.warpdrive.hull2.glass.lime.name=Limoen Gekleurd Geavanceerd Pantser Glas
 tile.warpdrive.hull2.glass.pink.name=Roze Gekleurd Geavanceerd Pantser Glas
@@ -393,7 +424,7 @@ tile.warpdrive.hull2.glass.black.name=Zwart Gekleurd Geavanceerd Pantser Glas
 tile.warpdrive.hull2.omnipanel.white.name=Wit Gekleurd Geavanceerd Pantser Omnipanel
 tile.warpdrive.hull2.omnipanel.orange.name=Oranje Gekleurd Geavanceerd Pantser Omnipanel
 tile.warpdrive.hull2.omnipanel.magenta.name=Magenta Gekleurd Geavanceerd Pantser Omnipanel
-tile.warpdrive.hull2.omnipanel.lightBlauw.name=Licht Blauw Gekleurd Geavanceerd Pantser Omnipanel
+tile.warpdrive.hull2.omnipanel.lightBlue.name=Licht Blauw Gekleurd Geavanceerd Pantser Omnipanel
 tile.warpdrive.hull2.omnipanel.yellow.name=Geel Gekleurd Geavanceerd Pantser Omnipanel
 tile.warpdrive.hull2.omnipanel.lime.name=Limoen Gekleurd Geavanceerd Pantser Omnipanel
 tile.warpdrive.hull2.omnipanel.pink.name=Roze Gekleurd Geavanceerd Pantser Omnipanel
@@ -410,7 +441,7 @@ tile.warpdrive.hull2.omnipanel.black.name=Zwart Gekleurd Geavanceerd Pantser Omn
 tile.warpdrive.hull2.slab.white.name=Wit Gekleurd Geavanceerd Pantser plaat
 tile.warpdrive.hull2.slab.orange.name=Oranje Gekleurd Geavanceerd Pantser plaat
 tile.warpdrive.hull2.slab.magenta.name=Magenta Gekleurd Geavanceerd Pantser plaat
-tile.warpdrive.hull2.slab.lightBlauw.name=Licht Blauw Gekleurd Geavanceerd Pantser plaat
+tile.warpdrive.hull2.slab.lightBlue.name=Licht Blauw Gekleurd Geavanceerd Pantser plaat
 tile.warpdrive.hull2.slab.yellow.name=Geel Gekleurd Geavanceerd Pantser plaat
 tile.warpdrive.hull2.slab.lime.name=Limoen Gekleurd Geavanceerd Pantser plaat
 tile.warpdrive.hull2.slab.pink.name=Roze Gekleurd Geavanceerd Pantser plaat
@@ -427,7 +458,7 @@ tile.warpdrive.hull2.slab.black.name=Zwart Gekleurd Geavanceerd Pantser plaat
 tile.warpdrive.hull2.stairs.white.name=Wit Gekleurd Geavanceerd Pantser Trap
 tile.warpdrive.hull2.stairs.orange.name=Oranje Gekleurd Geavanceerd Pantser Trap
 tile.warpdrive.hull2.stairs.magenta.name=Magenta Gekleurd Geavanceerd Pantser Trap
-tile.warpdrive.hull2.stairs.lightBlauw.name=Licht Blauw Gekleurd Geavanceerd Pantser Trap
+tile.warpdrive.hull2.stairs.lightBlue.name=Licht Blauw Gekleurd Geavanceerd Pantser Trap
 tile.warpdrive.hull2.stairs.yellow.name=Geel Gekleurd Geavanceerd Pantser Trap
 tile.warpdrive.hull2.stairs.lime.name=Limoen Gekleurd Geavanceerd Pantser Trap
 tile.warpdrive.hull2.stairs.pink.name=Roze Gekleurd Geavanceerd Pantser Trap
@@ -445,7 +476,7 @@ tile.warpdrive.hull2.stairs.black.name=Zwart Gekleurd Geavanceerd Pantser Trap
 tile.warpdrive.hull3.plain.white.name=Wit Gekleurd Superieur Pantser
 tile.warpdrive.hull3.plain.orange.name=Oranje Gekleurd Superieur Pantser
 tile.warpdrive.hull3.plain.magenta.name=Magenta Gekleurd Superieur Pantser
-tile.warpdrive.hull3.plain.lightBlauw.name=Licht Blauw Gekleurd Superieur Pantser
+tile.warpdrive.hull3.plain.lightBlue.name=Licht Blauw Gekleurd Superieur Pantser
 tile.warpdrive.hull3.plain.yellow.name=Geel Gekleurd Superieur Pantser
 tile.warpdrive.hull3.plain.lime.name=Limoen Gekleurd Superieur Pantser
 tile.warpdrive.hull3.plain.pink.name=Roze Gekleurd Superieur Pantser
@@ -462,7 +493,7 @@ tile.warpdrive.hull3.plain.black.name=Zwart Gekleurd Superieur Pantser
 tile.warpdrive.hull3.glass.white.name=Wit Gekleurd Superieur Pantser Glas
 tile.warpdrive.hull3.glass.orange.name=Oranje Gekleurd Superieur Pantser Glas
 tile.warpdrive.hull3.glass.magenta.name=Magenta Gekleurd Superieur Pantser Glas
-tile.warpdrive.hull3.glass.lightBlauw.name=Licht Blauw Gekleurd Superieur Pantser Glas
+tile.warpdrive.hull3.glass.lightBlue.name=Licht Blauw Gekleurd Superieur Pantser Glas
 tile.warpdrive.hull3.glass.yellow.name=Geel Gekleurd Superieur Pantser Glas
 tile.warpdrive.hull3.glass.lime.name=Limoen Gekleurd Superieur Pantser Glas
 tile.warpdrive.hull3.glass.pink.name=Roze Gekleurd Superieur Pantser Glas
@@ -479,7 +510,7 @@ tile.warpdrive.hull3.glass.black.name=Zwart Gekleurd Superieur Pantser Glas
 tile.warpdrive.hull3.omnipanel.white.name=Wit Gekleurd Superieur Pantser Omnipaneel
 tile.warpdrive.hull3.omnipanel.orange.name=Oranje Gekleurd Superieur Pantser Omnipaneel
 tile.warpdrive.hull3.omnipanel.magenta.name=Magenta Gekleurd Superieur Pantser Omnipaneel
-tile.warpdrive.hull3.omnipanel.lightBlauw.name=Licht Blauw Gekleurd Superieur Pantser Omnipaneel
+tile.warpdrive.hull3.omnipanel.lightBlue.name=Licht Blauw Gekleurd Superieur Pantser Omnipaneel
 tile.warpdrive.hull3.omnipanel.yellow.name=Geel Gekleurd Superieur Pantser Omnipaneel
 tile.warpdrive.hull3.omnipanel.lime.name=Limoen Gekleurd Superieur Pantser Omnipaneel
 tile.warpdrive.hull3.omnipanel.pink.name=Roze Gekleurd Superieur Pantser Omnipaneel
@@ -496,7 +527,7 @@ tile.warpdrive.hull3.omnipanel.black.name=Zwart Gekleurd Superieur Pantser Omnip
 tile.warpdrive.hull3.slab.white.name=Wit Gekleurd Superieur Pantser Plaat
 tile.warpdrive.hull3.slab.orange.name=Oranje Gekleurd Superieur Pantser Plaat
 tile.warpdrive.hull3.slab.magenta.name=Magenta Gekleurd Superieur Pantser Plaat
-tile.warpdrive.hull3.slab.lightBlauw.name=Licht Blauw Gekleurd Superieur Pantser Plaat
+tile.warpdrive.hull3.slab.lightBlue.name=Licht Blauw Gekleurd Superieur Pantser Plaat
 tile.warpdrive.hull3.slab.yellow.name=Geel Gekleurd Superieur Pantser Plaat
 tile.warpdrive.hull3.slab.lime.name=Limoen Gekleurd Superieur Pantser Plaat
 tile.warpdrive.hull3.slab.pink.name=Roze Gekleurd Superieur Pantser Plaat
@@ -513,7 +544,7 @@ tile.warpdrive.hull3.slab.black.name=Zwart Gekleurd Superieur Pantser Plaat
 tile.warpdrive.hull3.stairs.white.name=Wit Gekleurd Superieur Pantser Trap
 tile.warpdrive.hull3.stairs.orange.name=Oranje Gekleurd Superieur Pantser Trap
 tile.warpdrive.hull3.stairs.magenta.name=Magenta Gekleurd Superieur Pantser Trap
-tile.warpdrive.hull3.stairs.lightBlauw.name=Licht Blauw Gekleurd Superieur Pantser Trap
+tile.warpdrive.hull3.stairs.lightBlue.name=Licht Blauw Gekleurd Superieur Pantser Trap
 tile.warpdrive.hull3.stairs.yellow.name=Geel Gekleurd Superieur Pantser Trap
 tile.warpdrive.hull3.stairs.lime.name=Limoen Gekleurd Superieur Pantser Trap
 tile.warpdrive.hull3.stairs.pink.name=Roze Gekleurd Superieur Pantser Trap
@@ -636,15 +667,18 @@ warpdrive.video_channel.statusLine.invalid=§cVideokanaal %1$d is ongeldig.
 warpdrive.video_channel.statusLine.invalidOrNotLoaded=§cVideokanaal %1$d is ongeldig of camera is te ver weg!
 warpdrive.video_channel.statusLine.undefined=§7niet gedefinieerd videokanaal.\n§bGebruik een Afstemmingsvork§r om het te zetten.
 
-warpdrive.cloakingCore.invalidAssembly=§cOngeldige vormatie!
+warpdrive.cloakingCore.missingInnerAndOuter=§cIntegrity down to %1$d%%: missing channeling coil(s) towards %2$s and projecting coil(s) towards %3$s
+warpdrive.cloakingCore.missingInner=§cIntegrity down to %1$d%%: missing channeling coil(s) towards %2$s
+warpdrive.cloakingCore.missingOuter=§cIntegrity down to %1$d%%: missing projecting coil(s) towards %2$s
 warpdrive.cloakingCore.disabled=Dekmantelveld is uitgeschakeld
 warpdrive.cloakingCore.lowPower=§cDekmantelveld is uit, We hebben meer stroom nodig kapitein!
 warpdrive.cloakingCore.cloaking=Een Niveau %1$d dekmantelveld bedekt huidig %2$d blokken!
+
 warpdrive.IC2reactorLaserMonitor.noReactor=Geen reactor gevonden!
 warpdrive.IC2reactorLaserMonitor.multipleReactors=%1$d reactor(s) aangesloten.
+
 warpdrive.transporter.status=Van %1$.0f %2$.0f %3$.0f naar %4$.0f %5$.0f %6$.0f
 
 warpdrive.tooltip.itemTag.breathingHelmet=§Ademhalen in de ruimte§r consumeert de inhoud van een Zuurstoffles en/of IC2 Gecompresseerde Luchtcellen uit je inventory.
 warpdrive.tooltip.itemTag.flyInSpace=§bJetpack Die werkt in de ruimte§r.
 warpdrive.tooltip.itemTag.noFallDamage=§bAbsorbeert Schade van vallen§r.
-
