--- a/src/main/resources/assets/warpdrive/lang/zh_CN.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_CN.lang
@@ -1,3 +1,4 @@
+
 death.attack.warpdrive.asphyxia=%1$s窒息了
 death.attack.warpdrive.asphyxia.player=%1$s因%2$s窒息
 death.attack.warpdrive.cold=%1$s冻死了
@@ -39,8 +40,7 @@ item.warpdrive.crafting.CoilCrystal.name=线圈水晶
 item.warpdrive.crafting.ElectromagneticProjector.name=电磁投影仪
 item.warpdrive.crafting.Superconductor.name=超导体
 
-item.warpdrive.armor.AirCanisterFull.name=空气罐
-item.warpdrive.armor.Helmet.name=曲率头盔
+item.warpdrive.armor.helmet.name=曲率头盔
 item.warpdrive.armor.chestplate.name=曲率胸甲
 item.warpdrive.armor.leggings.name=曲率护腿
 item.warpdrive.armor.boots.name=曲率战靴
@@ -57,7 +57,6 @@ item.warpdrive.breathing.air_tank3.name=Superior Air Tank
 item.warpdrive.energy.IC2reactorLaserFocus.name=IC2反应堆激光焦点
 
 item.warpdrive.forcefield.shape.none.name=无形状
-
 item.warpdrive.forcefield.shape.none.tooltip=§4无效的项目
 item.warpdrive.forcefield.shape.sphere.name=球体
 item.warpdrive.forcefield.shape.sphere.tooltip=
@@ -156,11 +155,13 @@ item.warpdrive.tool.ship_token43.name=水晶符号#43
 item.warpdrive.tool.ship_token44.name=水晶符号#44
 item.warpdrive.tool.ship_token45.name=水晶符号#45
 
+
 item.warpdrive.tool.tuning_driver.video_channel.name=录像信号调节驱动器
 item.warpdrive.tool.tuning_driver.beam_frequency.name=传送频率调节驱动器
 item.warpdrive.tool.tuning_driver.control_channel.name=电磁波调节驱动器
 
 item.warpdrive.tool.tuning_driver.tooltip.usage=§b右击方块§7调节水晶\n§bSneak§7取消价值\n§b右击空气§7改变模式
+
 
 item.warpdrive.tool.tuning_fork.name=音叉
 item.warpdrive.tool.tuning_fork.white.name=白色音叉
@@ -321,7 +322,7 @@ tile.warpdrive.hull1.plain.black.name=黑色基础船体
 tile.warpdrive.hull1.glass.white.name=白色基础玻璃船体
 tile.warpdrive.hull1.glass.orange.name=橙色基础玻璃船体
 tile.warpdrive.hull1.glass.magenta.name=品红基础玻璃船体
-tile.warpdrive.hull1.glass.lightblue.name=浅蓝基础玻璃船体
+tile.warpdrive.hull1.glass.lightBlue.name=浅蓝基础玻璃船体
 tile.warpdrive.hull1.glass.yellow.name=黄色基础玻璃船体
 tile.warpdrive.hull1.glass.lime.name=黄绿基础玻璃船体
 tile.warpdrive.hull1.glass.pink.name=粉色基础玻璃船体
@@ -372,7 +373,7 @@ tile.warpdrive.hull1.slab.black.name=黑色基础船体台阶
 tile.warpdrive.hull1.stairs.white.name=白色基础船体楼梯
 tile.warpdrive.hull1.stairs.orange.name=橙色基础船体楼梯
 tile.warpdrive.hull1.stairs.magenta.name=品红基础船体楼梯
-tile.warpdrive.hull1.stairs.lightblue.name=浅蓝基础船体楼梯
+tile.warpdrive.hull1.stairs.lightBlue.name=浅蓝基础船体楼梯
 tile.warpdrive.hull1.stairs.yellow.name=黄色基础船体楼梯
 tile.warpdrive.hull1.stairs.lime.name=黄绿基础船体楼梯
 tile.warpdrive.hull1.stairs.pink.name=粉色基础船体楼梯
@@ -390,7 +391,7 @@ tile.warpdrive.hull1.stairs.black.name=黑色基础船体楼梯
 tile.warpdrive.hull2.plain.white.name=白色先进船体
 tile.warpdrive.hull2.plain.orange.name=橙色先进船体
 tile.warpdrive.hull2.plain.magenta.name=品红先进船体
-tile.warpdrive.hull2.plain.lightblue.name=浅蓝先进船体
+tile.warpdrive.hull2.plain.lightBlue.name=浅蓝先进船体
 tile.warpdrive.hull2.plain.yellow.name=黄色先进船体
 tile.warpdrive.hull2.plain.lime.name=黄绿先进船体
 tile.warpdrive.hull2.plain.pink.name=粉色先进船体
@@ -407,7 +408,7 @@ tile.warpdrive.hull2.plain.black.name=黑色先进船体
 tile.warpdrive.hull2.glass.white.name=白色先进玻璃船体
 tile.warpdrive.hull2.glass.orange.name=橙色先进玻璃船体
 tile.warpdrive.hull2.glass.magenta.name=品红先进玻璃船体
-tile.warpdrive.hull2.glass.lightblue.name=浅蓝先进玻璃船体
+tile.warpdrive.hull2.glass.lightBlue.name=浅蓝先进玻璃船体
 tile.warpdrive.hull2.glass.yellow.name=黄色先进玻璃船体
 tile.warpdrive.hull2.glass.lime.name=黄绿先进玻璃船体
 tile.warpdrive.hull2.glass.pink.name=粉色先进玻璃船体
@@ -458,7 +459,7 @@ tile.warpdrive.hull2.slab.black.name=黑色先进船体台阶
 tile.warpdrive.hull2.stairs.white.name=白色先进船体楼梯
 tile.warpdrive.hull2.stairs.orange.name=橙色先进船体楼梯
 tile.warpdrive.hull2.stairs.magenta.name=品红先进船体楼梯
-tile.warpdrive.hull2.stairs.lightblue.name=浅蓝先进船体楼梯
+tile.warpdrive.hull2.stairs.lightBlue.name=浅蓝先进船体楼梯
 tile.warpdrive.hull2.stairs.yellow.name=黄色先进船体楼梯
 tile.warpdrive.hull2.stairs.lime.name=黄绿先进船体楼梯
 tile.warpdrive.hull2.stairs.pink.name=粉色先进船体楼梯
@@ -476,7 +477,7 @@ tile.warpdrive.hull2.stairs.black.name=黑色先进船体楼梯
 tile.warpdrive.hull3.plain.white.name=白色卓越船体
 tile.warpdrive.hull3.plain.orange.name=橙色卓越船体
 tile.warpdrive.hull3.plain.magenta.name=品红卓越船体
-tile.warpdrive.hull3.plain.lightblue.name=浅蓝卓越船体
+tile.warpdrive.hull3.plain.lightBlue.name=浅蓝卓越船体
 tile.warpdrive.hull3.plain.yellow.name=黄色卓越船体
 tile.warpdrive.hull3.plain.lime.name=黄绿卓越船体
 tile.warpdrive.hull3.plain.pink.name=粉色卓越船体
@@ -493,7 +494,7 @@ tile.warpdrive.hull3.plain.black.name=黑色卓越船体
 tile.warpdrive.hull3.glass.white.name=白色卓越玻璃船体
 tile.warpdrive.hull3.glass.orange.name=橙色卓越玻璃船体
 tile.warpdrive.hull3.glass.magenta.name=品红卓越玻璃船体
-tile.warpdrive.hull3.glass.lightblue.name=浅蓝卓越玻璃船体
+tile.warpdrive.hull3.glass.lightBlue.name=浅蓝卓越玻璃船体
 tile.warpdrive.hull3.glass.yellow.name=黄色卓越玻璃船体
 tile.warpdrive.hull3.glass.lime.name=黄绿卓越玻璃船体
 tile.warpdrive.hull3.glass.pink.name=粉色卓越玻璃船体
@@ -544,7 +545,7 @@ tile.warpdrive.hull3.slab.black.name=黑色卓越船体台阶
 tile.warpdrive.hull3.stairs.white.name=白色卓越船体楼梯
 tile.warpdrive.hull3.stairs.orange.name=橙色卓越船体楼梯
 tile.warpdrive.hull3.stairs.magenta.name=品红卓越船体楼梯
-tile.warpdrive.hull3.stairs.lightblue.name=浅蓝卓越船体楼梯
+tile.warpdrive.hull3.stairs.lightBlue.name=浅蓝卓越船体楼梯
 tile.warpdrive.hull3.stairs.yellow.name=黄色卓越船体楼梯
 tile.warpdrive.hull3.stairs.lime.name=黄绿卓越船体楼梯
 tile.warpdrive.hull3.stairs.pink.name=粉色卓越船体楼梯
@@ -583,9 +584,9 @@ warpdrive.beam_frequency.tooltip-tbc=光线频率设置为%1$d
 warpdrive.beam_frequency.get=Beam frequency %2$d has been retrieved from %1$s 
 warpdrive.beam_frequency.set=%1$s is now aligned with Beam frequency %2$d
 warpdrive.beam_frequency.set-tbc=%1$s正在于光线通道 %2$d进行匹配
-warpdrive.beamFrequency.statusLine.valid=光线频率%1$d是有效的
-warpdrive.beamFrequency.statusLine.invalid=§c光线频率%1$d是无效的
-warpdrive.beamFrequency.statusLine.undefined=§7未定义的光线频率.\n§b使用一个音叉§r 去设置它
+warpdrive.beam_frequency.statusLine.valid=光线频率%1$d是有效的
+warpdrive.beam_frequency.statusLine.invalid=§c光线频率%1$d是无效的
+warpdrive.beam_frequency.statusLine.undefined=§7未定义的光线频率.\n§b使用一个音叉§r 去设置它
 
 warpdrive.breathing.alarm=Breathing alarm
 warpdrive.breathing.invalid_setup=No breathing helmet\nor incomplete armor
